fixing background for dark mode

--- a/src/app/components/tapbars/sio-floating-tapbar/sio-floating-tapbar.component.scss
+++ b/src/app/components/tapbars/sio-floating-tapbar/sio-floating-tapbar.component.scss
@@ -1,7 +1,7 @@
 :host {
 	position: fixed;
 	z-index: 100;
-	background-color: white;
+	background-color: var(--ion-background-color);
 	box-shadow: var(--sio-box-shadow);
 	height: var(--sizing-element-medium);
 	min-width: var(--sizing-element-medium);
@@ -12,4 +12,10 @@
 	transform: translateX(-50%);
 	display: flex;
 	align-items: center;
+}
+
+body.dark {
+  :host {
+    background-color: var(--ion-color-translucent);
+  }
 }
